# tui-chess

./: Cargo.toml  LICENSE  Readme.md
src/: app.rs  event.rs  handler.rs  main.rs  tui.rs  ui.rs
src/utils/: cell.rs  coord.rs  general.rs  mod.rs
src/widgets/: board.rs  info.rs  log.rs  mod.rs  terminal_too_small.rs
