[package]
name = "tui-chess"
version = "0.1.0"
license = "MIT"
description = "A tui chess game written in rust."
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
pleco = "0.5.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
